Added "Ease" power and renamed OverwhelmingPowerAttack.java to UnstoppableAttack.java

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Power-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Power-Strings.json
@@ -6,5 +6,9 @@
 "DDmod:RarePower": {
         "NAME": "Placeholder Power",
         "DESCRIPTIONS": ["At the start of your turn, TOUCH #b", " enemy." , " enemies."]
+},
+"DDmod:EasePower": {
+        "NAME": "Ease",
+        "DESCRIPTIONS": ["Whenever a card is Exhausted, NL gain 1 HP."]
 }
 }
