--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -3,14 +3,6 @@
     "NAME": "Strike",
     "DESCRIPTION": "Deal !D! damage. NL [#0000ff]This[] [#ff0000]Is[] [#ffff00]How[] [#88888]color[] [#ff00ff]works.[]"
   },
-  "DDmod:RapidStrikeAttack": {
-    "NAME": "Rapid Strike",
-    "DESCRIPTION": "Deal !D! damage !M! times."
-  },
-  "DDmod:OverwhelmingPowerAttack": {
-    "NAME": "Overwhelming Power",
-    "DESCRIPTION": "Deal !D! damage and heal for !D!. NL Gain !B! block. NL Exhaust"
-  },
   "DDmod:DefaultCommonSkill": {
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block. NL DDmod:Multiword_Keyword."
@@ -57,5 +49,17 @@
   "DDmod:OrbSkill": {
     "NAME": "Get Orb",
     "DESCRIPTION": "Channel 1 Default Orb."
+  },
+  "DDmod:RapidStrikeAttack": {
+    "NAME": "Rapid Strike",
+    "DESCRIPTION": "Deal !D! damage !M! times."
+  },
+  "DDmod:UnstoppableAttack": {
+    "NAME": "Unstoppable",
+    "DESCRIPTION": "Deal !D! damage and heal for !D!. NL Gain !B! block. NL Exhaust"
+  },
+  "DDmod:EasePowerCard": {
+    "NAME": "Ease",
+    "DESCRIPTION": "Whenever a card is Exhausted, NL gain 1 HP."
   }
 }
