Added PokeAttack card

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -69,5 +69,10 @@
   "DDmod:BurningFumesPowerCard": {
     "NAME": "Burning Fumes",
     "DESCRIPTION": "When a card is Exhausted, deal !M! damage to all enemies."
+  },
+  "DDmod:PokeAttack": {
+    "NAME": "Poke",
+    "DESCRIPTION": "Deal !D! damage !M! times.",
+    "UPGRADE_DESCRIPTION": " NL Innate."
   }
 }
