Added SpikedSkill card

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -74,5 +74,10 @@
     "NAME": "Poke",
     "DESCRIPTION": "Deal !D! damage !M! times.",
     "UPGRADE_DESCRIPTION": " NL Innate."
+  },
+  "DDmod:SpikedSkill": {
+    "NAME": "Spiked",
+    "DESCRIPTION": "Gain !M! thorns. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Gain !M! thorns."
   }
 }
