Added ScaleUpSkill and modified AllInSkill

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -79,5 +79,13 @@
     "NAME": "Spiked",
     "DESCRIPTION": "Gain !M! thorns. NL Exhaust.",
     "UPGRADE_DESCRIPTION": "Gain !M! thorns."
+  },
+  "DDmod:PlatedThornsSkill": {
+    "NAME": "Plated Thorns",
+    "DESCRIPTION": "Exhaust X cards. NL Gain X thorns."
+  },
+  "DDmod:ScaleUpSkill": {
+    "NAME": "Scale Up",
+    "DESCRIPTION": "Double your thorns. NL Exhaust."
   }
 }
