small bug fixes

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -77,7 +77,7 @@
   },
   "DDmod:SpikedSkill": {
     "NAME": "Spikes",
-    "DESCRIPTION": "Gain !M! thorns. NL Exhaust.",
+    "DESCRIPTION": "Gain !M! thorns.",
     "UPGRADE_DESCRIPTION": "Gain !M! thorns."
   },
   "DDmod:PlatedThornsSkill": {
