Added WildConcoctionSkill card

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -103,5 +103,9 @@
     "NAME": "Recharge",
     "DESCRIPTION": "Heal !M! HP. NL Skip your next turn. NL Exhaust.",
     "UPGRADE_DESCRIPTION": "Heal !M! HP. NL Exhaust."
+  },
+  "DDmod:WildConcoctionSkill": {
+    "NAME": "Wild Concoction",
+    "DESCRIPTION": "Obtain a random potion."
   }
 }
