finished basic thorns event

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Event-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Event-Strings.json
@@ -21,11 +21,9 @@
   "DDmod:ThornEvent": {
     "NAME": "Prickly Situation",
     "DESCRIPTIONS": [
-      "As you move through ~The~ ~City~ you come across a #pPurple #pMirror. NL You look at it, but you see no reflection.",
-      "You see no one but #g~You~ #g~wish~ #g~to~ #g~become~ #g~someone.~",
-      "#r@YOU@ #r@EXIST@ #r@AND@ #r@ARE@ #r@VALID!@",
-      "#yYou #yare #yat #ypeace #ywith #yyour #ypresence.",
-      "You have no hands."
+      "A small monster ~slithers~ across your path. It offers you a chance to learn new skills.",
+      "You accept the offer and continue on your way.",
+      "You decline the offer and continue on your way"
     ],
     "OPTIONS": [
       "[Accept] #gGain a random Thorn card.",
