--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Event-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Event-Strings.json
@@ -26,8 +26,9 @@
       "You decline the offer and continue on your way"
     ],
     "OPTIONS": [
-      "[Accept] #gGain a random Thorn card.",
-      "[Leave]"
+      "[Accept] #gGain a random #yThorn card.",
+      "[Leave]",
+      "[Accept] #gGain a random card."
     ]
   }
 }
