Added cleanse potion and dex relic

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Card-Strings.json
@@ -133,5 +133,9 @@
   "DDmod:CallousedSkill": {
     "NAME": "Calloused",
     "DESCRIPTION": "Lose 6 HP and gain !B! Block."
-  }
+  },
+  "DDmod:ChoiceSkill": {
+  "NAME": "Choice",
+  "DESCRIPTION": "Choose one of three."
+}
 }
