minor bugs and 1.2.0 release

--- a/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Relic-Strings.json
+++ b/StS-DefaultModBase-master/DDmod/src/main/resources/DDmodResources/localization/eng/DDmod-Relic-Strings.json
@@ -41,7 +41,7 @@
 
   "DDmod:StuhbiRelic": {
     "NAME": "Stuhbi",
-    "FLAVOR": "Boots that enhance dexterity and style too.",
+    "FLAVOR": "Boots that enhance dexterity and style.",
     "DESCRIPTIONS": [
       "You can now gain +1 Dex at rest sites."
     ]
